Fix alignment issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -76,7 +76,7 @@
 }
 
 #availability-column {
-  flex: 0 0 24%;
+  flex: 0 0 28%;
 }
 
 #main-buttons-column {
